force-app/main/default/objects/Transaction_Log__c/Transaction_Log__c.object-meta.xml
<CustomObject>
    <label>Data Execution Log</label>
    <nameField>
        <label>Job Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Execution Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>