force-app/main/default/objects/Transaction_Log__c/fields/Error_Detail__c.field-meta.xml
<CustomField>
    <fullName>Error_Detail__c</fullName>
    <label>Error Detail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>