force-app/main/default/objects/Transaction_Log__c/fields/Failed__c.field-meta.xml
<CustomField>
    <fullName>Failed__c</fullName>
    <label>Total Failed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>