force-app/main/default/objects/Transaction_Log__c/fields/FailureReason__c.field-meta.xml
<CustomField>
    <fullName>FailureReason__c</fullName>
    <label>Failure Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>