force-app/main/default/objects/Transaction_Log__c/fields/Received_Request__c.field-meta.xml
<CustomField>
    <fullName>Received_Request__c</fullName>
    <label>Received Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>