force-app/main/default/objects/Transaction_Log__c/fields/SF_user__c.field-meta.xml
<CustomField>
    <fullName>SF_user__c</fullName>
    <description>User used to load the extracted data.</description>
    <label>SF User</label>
    <length>100</length>
    <type>Text</type>
</CustomField>