force-app/main/default/objects/Transaction_Log__c/fields/Source_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Source_Identifier__c</fullName>
    <label>Source Identifier</label>
    <length>64</length>
    <type>Text</type>
</CustomField>