force-app/main/default/objects/Transaction_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <color>#FF9966</color>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <color>#33CC00</color>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Failed</fullName>
                <color>#FF0000</color>
                <label>Failed</label>
            </value>
            <value>
                <fullName>File Not Found</fullName>
            </value>
            <value>
                <fullName>Partially Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>