force-app/main/default/objects/Transaction_Log__c/fields/Success_Rate__c.field-meta.xml
<CustomField>
    <fullName>Success_Rate__c</fullName>
    <formula>IF((Success__c / ( Success__c + Failed__c))*100 = 100, &quot;🟢&quot;, IF((Success__c / ( Success__c + Failed__c))*100 &gt; 0, &quot;🟠&quot;, &quot;🔴&quot;)) +&quot; &quot;
+ TEXT( FLOOR(( (Success__c /(Success__c + Failed__c))*100 )) )+ &quot;%&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Success Rate</label>
    <type>Text</type>
</CustomField>