force-app/main/default/objects/Transaction_Log__c/fields/Target_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Target_Identifier__c</fullName>
    <label>Target Identifier</label>
    <length>64</length>
    <type>Text</type>
</CustomField>