force-app/main/default/objects/Transaction_Log__c/fields/Target_System__c.field-meta.xml
<CustomField>
    <fullName>Target_System__c</fullName>
    <description>Who is transforming the data</description>
    <label>Target System</label>
    <length>100</length>
    <type>Text</type>
</CustomField>